[package]
name = "astarpa2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
pa-generate.workspace = true
rand = "0.8"
triple_accel = "0.4.0"

[features]
example = ["pa-vis/sdl", "pa-bitpacking/example"]
